--- a/index.html
+++ b/index.html
@@ -31,12 +31,25 @@
 
 <body class="font-roboto">
    <!-- header section -->
-   <header class="bg-[#FFFBF0] p-3 pb-7">
-      <nav>
-
+   <header class="bg-[#FFFBF0] p-3 pb-7 space-y-7 md:space-y-4">
+      <nav class="max-w-screen-xl mx-auto md:flex md:justify-between items-center">
+         <!-- nav header -->
+         <div class="nav-header flex justify-between items-center">
+            <img class="w-6/12 md:w-[300px] h-9 md:h-12" src="./icons/logo.png" alt="logo">
+            <div class="sidebar-btn md:hidden text-xl">
+               <i class="fa-solid fa-bars"></i>
+            </div>
+         </div>
+         <!-- nav links -->
+          <ul class="hidden md:flex gap-4 lg:gap-6 font-bold text-base">
+            <li>Home</li>
+            <li>Products</li>
+            <li>About us</li>
+            <li>Contact us</li>
+          </ul>
       </nav>
       <!-- banner -->
-       <div class="md:flex gap-4">
+       <div class="md:flex gap-4 max-w-screen-xl mx-auto">
          <div class="flex flex-col gap-5 items-start justify-center flex-1">
             <h1 class="font-bebas-neue uppercase text-5xl md:text-6xl lg:text-7xl font-bold text-stone-800">
                <span class="text-orange-400">Be the Penguin</span> <br> of Winder
