--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <body class="font-roboto">
    <!-- header section -->
    <header class="bg-[#FFFBF0] p-3 pb-7 space-y-7 md:space-y-4">
+      <!-- nav bar section -->
       <nav class="max-w-screen-xl mx-auto md:flex md:justify-between items-center">
          <!-- nav header -->
          <div class="nav-header flex justify-between items-center">
@@ -48,6 +49,7 @@
             <li>Contact us</li>
           </ul>
       </nav>
+
       <!-- banner -->
        <div class="md:flex gap-4 max-w-screen-xl mx-auto">
          <div class="flex flex-col gap-5 items-start justify-center flex-1">
@@ -68,7 +70,9 @@
    </header>
 
    <!-- main section -->
-   <main></main>
+   <main>
+      
+   </main>
 
    <!-- footer section -->
    <footer></footer>
