--- a/index.html
+++ b/index.html
@@ -128,20 +128,20 @@
             </div>
             <!-- card 2 -->
             <div class="max-w-96 mx-auto rounded-xl shadow-xl p-4 py-5 space-y-5 border border-stone-100">
-               <img class="aspect-[1/1] p-14 bg-stone-300 rounded-xl" src="./images/jacket-1.png"
+               <img class="aspect-[1/1] p-14 bg-stone-300 rounded-xl" src="./images/jacket-2.png"
                   alt="yellow jacket for women">
                <div>
                   <h2 class="text-lg capitalize font-semibold text-stone-800">
-                     yellow coat jacket
+                     light yellow coat jacket
                   </h2>
                   <p class="text-collaps-2">
-                     Brighten your wardrobe with our chic yellow women's jacket. Perfect for any season, its sleek
+                     Brighten your wardrobe with our chic light yellow women's jacket. Perfect for any season, its sleek
                      design combines vibrant color with sophisticated style, offering both warmth and a pop of
                      confidence.
                   </p>
                </div>
                <div class="flex items-center justify-between">
-                  <h1 class="text-4xl font-bold text-orange-400">$234</h1>
+                  <h1 class="text-4xl font-bold text-orange-400">$244</h1>
                   <button
                      class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white px-6 py-4 rounded-md flex gap-2 items-center uppercase font-semibold text-lg">
                      <i class="fa-solid fa-cart-shopping uppercase"></i> Buy Now
@@ -150,20 +150,20 @@
             </div>
             <!-- card 3 -->
             <div class="max-w-96 mx-auto rounded-xl shadow-xl p-4 py-5 space-y-5 border border-stone-100">
-               <img class="aspect-[1/1] p-14 bg-stone-300 rounded-xl" src="./images/jacket-1.png"
+               <img class="aspect-[1/1] p-14 bg-stone-300 rounded-xl" src="./images/jacket-3.png"
                   alt="yellow jacket for women">
                <div>
                   <h2 class="text-lg capitalize font-semibold text-stone-800">
-                     yellow coat jacket
+                     Red coat jacket
                   </h2>
                   <p class="text-collaps-2">
-                     Brighten your wardrobe with our chic yellow women's jacket. Perfect for any season, its sleek
+                     Brighten your wardrobe with our chic red women's jacket. Perfect for any season, its sleek
                      design combines vibrant color with sophisticated style, offering both warmth and a pop of
                      confidence.
                   </p>
                </div>
                <div class="flex items-center justify-between">
-                  <h1 class="text-4xl font-bold text-orange-400">$234</h1>
+                  <h1 class="text-4xl font-bold text-orange-400">$254</h1>
                   <button
                      class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white px-6 py-4 rounded-md flex gap-2 items-center uppercase font-semibold text-lg">
                      <i class="fa-solid fa-cart-shopping uppercase"></i> Buy Now
