--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
          <!-- cards container -->
          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5 overflow-auto max-h-[650px] md:max-h-[700px]">
             <!-- card 1 -->
-            <div class="max-w-96 mx-auto rounded-xl shadow-xl p-4 py-5 space-y-5 border border-stone-100">
+            <div class="max-w-96 mx-auto rounded-xl shadow-md p-4 py-5 space-y-5 border border-stone-100">
                <img class="aspect-[1/1] p-14 bg-stone-300 rounded-xl" src="./images/jacket-1.png"
                   alt="yellow jacket for women">
                <div>
@@ -127,7 +127,7 @@
                </div>
             </div>
             <!-- card 2 -->
-            <div class="max-w-96 mx-auto rounded-xl shadow-xl p-4 py-5 space-y-5 border border-stone-100">
+            <div class="max-w-96 mx-auto rounded-xl shadow-md p-4 py-5 space-y-5 border border-stone-100">
                <img class="aspect-[1/1] p-14 bg-stone-300 rounded-xl" src="./images/jacket-2.png"
                   alt="yellow jacket for women">
                <div>
@@ -149,7 +149,7 @@
                </div>
             </div>
             <!-- card 3 -->
-            <div class="max-w-96 mx-auto rounded-xl shadow-xl p-4 py-5 space-y-5 border border-stone-100">
+            <div class="max-w-96 mx-auto rounded-xl shadow-md p-4 py-5 space-y-5 border border-stone-100">
                <img class="aspect-[1/1] p-14 bg-stone-300 rounded-xl" src="./images/jacket-3.png"
                   alt="yellow jacket for women">
                <div>
