increase the size the hamburger

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
          <!-- nav header -->
          <div class="nav-header flex justify-between items-center">
             <img class="w-5/12 md:w-[300px] h-9 md:h-12" src="./icons/logo.png" alt="logo">
-            <div class="sidebar-btn md:hidden text-xl">
+            <div class="sidebar-btn md:hidden text-2xl font-bold">
                <i class="fa-solid fa-bars"></i>
             </div>
          </div>
