--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
    </style>
 </head>
 
-<body class="font-roboto">
+<body class="font-roboto space-y-10">
    <!-- header section -->
    <header class="bg-[#FFFBF0] p-3 pb-7 space-y-7 md:space-y-4">
       <!-- nav bar section -->
@@ -95,7 +95,7 @@
    </header>
 
    <!-- main section -->
-   <main class="p-3">
+   <main class="p-3 space-y-14">
       <!-- women jacket section -->
       <section class="max-w-screen-xl mx-auto space-y-4">
          <!-- section title -->
@@ -158,6 +158,83 @@
                   </h2>
                   <p class="text-collaps-2">
                      Brighten your wardrobe with our chic red women's jacket. Perfect for any season, its sleek
+                     design combines vibrant color with sophisticated style, offering both warmth and a pop of
+                     confidence.
+                  </p>
+               </div>
+               <div class="flex items-center justify-between">
+                  <h1 class="text-4xl font-bold text-orange-400">$254</h1>
+                  <button
+                     class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white px-6 py-4 rounded-md flex gap-2 items-center uppercase font-semibold text-lg">
+                     <i class="fa-solid fa-cart-shopping uppercase"></i> Buy Now
+                  </button>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <!-- man's jacket section -->
+      <section class="max-w-screen-xl mx-auto space-y-4">
+         <!-- section title -->
+         <h1 class="text-2xl font-bold uppercase text-stone-800">
+            man jacket
+         </h1>
+         <!-- cards container -->
+         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5 overflow-auto max-h-[650px] md:max-h-[700px]">
+            <!-- card 1 -->
+            <div class="max-w-96 mx-auto rounded-xl shadow-md p-4 py-5 space-y-5 border border-stone-100">
+               <img class="aspect-[1/1] p-14 bg-stone-300 rounded-xl" src="./images/jacket-4.png"
+                  alt="yellow jacket for women">
+               <div>
+                  <h2 class="text-lg capitalize font-semibold text-stone-800">
+                     yellow coat jacket
+                  </h2>
+                  <p class="text-collaps-2">
+                     Brighten your wardrobe with our chic yellow men's jacket. Perfect for any season, its sleek
+                     design combines vibrant color with sophisticated style, offering both warmth and a pop of
+                     confidence.
+                  </p>
+               </div>
+               <div class="flex items-center justify-between">
+                  <h1 class="text-4xl font-bold text-orange-400">$234</h1>
+                  <button
+                     class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white px-6 py-4 rounded-md flex gap-2 items-center uppercase font-semibold text-lg">
+                     <i class="fa-solid fa-cart-shopping uppercase"></i> Buy Now
+                  </button>
+               </div>
+            </div>
+            <!-- card 2 -->
+            <div class="max-w-96 mx-auto rounded-xl shadow-md p-4 py-5 space-y-5 border border-stone-100">
+               <img class="aspect-[1/1] p-14 bg-stone-300 rounded-xl" src="./images/jacket-5.png"
+                  alt="yellow jacket for women">
+               <div>
+                  <h2 class="text-lg capitalize font-semibold text-stone-800">
+                     brown coat jacket
+                  </h2>
+                  <p class="text-collaps-2">
+                     Brighten your wardrobe with our chic brown men's jacket. Perfect for any season, its sleek
+                     design combines vibrant color with sophisticated style, offering both warmth and a pop of
+                     confidence.
+                  </p>
+               </div>
+               <div class="flex items-center justify-between">
+                  <h1 class="text-4xl font-bold text-orange-400">$244</h1>
+                  <button
+                     class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white px-6 py-4 rounded-md flex gap-2 items-center uppercase font-semibold text-lg">
+                     <i class="fa-solid fa-cart-shopping uppercase"></i> Buy Now
+                  </button>
+               </div>
+            </div>
+            <!-- card 3 -->
+            <div class="max-w-96 mx-auto rounded-xl shadow-md p-4 py-5 space-y-5 border border-stone-100">
+               <img class="aspect-[1/1] p-14 bg-stone-300 rounded-xl" src="./images/jacket-6.png"
+                  alt="yellow jacket for women">
+               <div>
+                  <h2 class="text-lg capitalize font-semibold text-stone-800">
+                     dark blue coat jacket
+                  </h2>
+                  <p class="text-collaps-2">
+                     Brighten your wardrobe with our chic dark blue men's jacket. Perfect for any season, its sleek
                      design combines vibrant color with sophisticated style, offering both warmth and a pop of
                      confidence.
                   </p>
