changed all the paragraph text color

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h1 class="font-bebas-neue uppercase text-5xl md:text-6xl lg:text-7xl font-bold text-stone-800">
                <span class="text-orange-400">Be the Penguin</span> <br> of Winder
             </h1>
-            <p>
+            <p class="text-collaps-4 text-slate-500">
                Discover the latest trends in fashion at Penguin Fashion. Elevate your style with our curated collection
                of chic, contemporary clothing and accessories. Shop now for exclusive looks!
             </p>
@@ -113,7 +113,7 @@
                   <h2 class="text-lg capitalize font-semibold text-stone-800">
                      yellow coat jacket
                   </h2>
-                  <p class="text-collaps-2">
+                  <p class="text-collaps-2 text-slate-500">
                      Brighten your wardrobe with our chic yellow women's jacket. Perfect for any season, its sleek
                      design combines vibrant color with sophisticated style, offering both warmth and a pop of
                      confidence.
@@ -135,7 +135,7 @@
                   <h2 class="text-lg capitalize font-semibold text-stone-800">
                      light yellow coat jacket
                   </h2>
-                  <p class="text-collaps-2">
+                  <p class="text-collaps-2 text-slate-500">
                      Brighten your wardrobe with our chic light yellow women's jacket. Perfect for any season, its sleek
                      design combines vibrant color with sophisticated style, offering both warmth and a pop of
                      confidence.
@@ -157,7 +157,7 @@
                   <h2 class="text-lg capitalize font-semibold text-stone-800">
                      Red coat jacket
                   </h2>
-                  <p class="text-collaps-2">
+                  <p class="text-collaps-2 text-slate-500">
                      Brighten your wardrobe with our chic red women's jacket. Perfect for any season, its sleek
                      design combines vibrant color with sophisticated style, offering both warmth and a pop of
                      confidence.
@@ -191,7 +191,7 @@
                   <h2 class="text-lg capitalize font-semibold text-stone-800">
                      yellow coat jacket
                   </h2>
-                  <p class="text-collaps-2">
+                  <p class="text-collaps-2 text-slate-500">
                      Brighten your wardrobe with our chic yellow men's jacket. Perfect for any season, its sleek
                      design combines vibrant color with sophisticated style, offering both warmth and a pop of
                      confidence.
@@ -213,7 +213,7 @@
                   <h2 class="text-lg capitalize font-semibold text-stone-800">
                      brown coat jacket
                   </h2>
-                  <p class="text-collaps-2">
+                  <p class="text-collaps-2 text-slate-500">
                      Brighten your wardrobe with our chic brown men's jacket. Perfect for any season, its sleek
                      design combines vibrant color with sophisticated style, offering both warmth and a pop of
                      confidence.
@@ -235,7 +235,7 @@
                   <h2 class="text-lg capitalize font-semibold text-stone-800">
                      dark blue coat jacket
                   </h2>
-                  <p class="text-collaps-2">
+                  <p class="text-collaps-2 text-slate-500">
                      Brighten your wardrobe with our chic dark blue men's jacket. Perfect for any season, its sleek
                      design combines vibrant color with sophisticated style, offering both warmth and a pop of
                      confidence.
