applied hover effect to the nav links

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
          </div>
          <!-- nav links -->
          <ul class="hidden md:flex gap-4 lg:gap-6 font-bold text-base">
-            <li>Home</li>
-            <li>Products</li>
-            <li>About us</li>
-            <li>Contact us</li>
+            <li><a class="hover:underline text-slate-900 hover:text-slate-700" href="#home">Home</a></li>
+            <li><a class="hover:underline text-slate-900 hover:text-slate-700" href="#products">Products</a></li>
+            <li><a class="hover:underline text-slate-900 hover:text-slate-700" href="#about-us">About us</a></li>
+            <li><a class="hover:underline text-slate-900 hover:text-slate-700" href="#contact-us">Contact us</a></li>
          </ul>
       </nav>
 
