finished the last part

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
    </header>
 
    <!-- main section -->
-   <main class="p-3 space-y-14">
+   <main class="p-3 space-y-16">
       <!-- women jacket section -->
       <section class="max-w-screen-xl mx-auto space-y-4">
          <!-- section title -->
@@ -251,6 +251,54 @@
             </div>
          </div>
       </section>
+
+      <!-- last section -->
+       <section class="max-w-screen-xl mx-auto">
+         <div class="md:grid md:grid-cols-2 gap-10 space-y-10">
+            <div class="md:order-2 grid items-center">
+               <img class="w-full h-full" src="./images/shopping.png" alt="">
+            </div>
+
+            <div class="grow space-y-6">
+               <!-- card 1 -->
+               <div class="flex items-center gap-5">
+                  <img class="w-[90px]" src="./icons/house.png" alt="house">
+                  <div class="space-y-1">
+                     <h2 class="text-lg capitalize font-semibold text-stone-800">
+                        find the perfect fit
+                     </h2>
+                     <p class="text-collaps-2 text-slate-500">
+                        Everybody is different, which is why we offer styles for every body
+                     </p>
+                  </div>
+               </div>
+               <!-- card 2 -->
+               <div class="flex items-center gap-5">
+                  <img class="w-[90px]" src="./icons/box.png" alt="house">
+                  <div class="space-y-1">
+                     <h2 class="text-lg capitalize font-semibold text-stone-800">
+                        free exchanges
+                     </h2>
+                     <p class="text-collaps-2 text-slate-500">
+                        One of the many reasons you can shop with peace of mind.
+                     </p>
+                  </div>
+               </div>
+               <!-- card 3 -->
+               <div class="flex items-center gap-5">
+                  <img class="w-[90px]" src="./icons/question.png" alt="house">
+                  <div class="space-y-1">
+                     <h2 class="text-lg capitalize font-semibold text-stone-800">
+                        free exchanges
+                     </h2>
+                     <p class="text-collaps-2 text-slate-500">
+                        One of the many reasons you can shop with peace of mind.
+                     </p>
+                  </div>
+               </div>
+            </div>
+         </div>
+       </section>
    </main>
 
    <!-- footer section -->
