fixed margin related small issue

--- a/index.html
+++ b/index.html
@@ -256,13 +256,13 @@
        <section class="max-w-screen-xl mx-auto">
          <div class="md:grid md:grid-cols-2 gap-10 space-y-10">
             <div class="md:order-2 grid items-center">
-               <img class="w-full h-full" src="./images/shopping.png" alt="">
+               <img class="w-full h-full md:h-[80%]" src="./images/shopping.png" alt="">
             </div>
-
-            <div class="grow space-y-6">
+            <!-- cards -->
+            <div class="space-y-6">
                <!-- card 1 -->
-               <div class="flex items-center gap-5">
-                  <img class="w-[90px]" src="./icons/house.png" alt="house">
+               <div class="text-center md:text-left md:flex md:items-center gap-5 shadow-md p-3 border border-stone-400 rounded-sm">
+                  <img class="w-[90px] mx-auto md:m-0" src="./icons/house.png" alt="house">
                   <div class="space-y-1">
                      <h2 class="text-lg capitalize font-semibold text-stone-800">
                         find the perfect fit
@@ -273,8 +273,8 @@
                   </div>
                </div>
                <!-- card 2 -->
-               <div class="flex items-center gap-5">
-                  <img class="w-[90px]" src="./icons/box.png" alt="house">
+               <div class="text-center md:text-left md:flex md:items-center gap-5 shadow-md p-3 border border-stone-400 rounded-sm">
+                  <img class="w-[90px] mx-auto md:m-0" src="./icons/box.png" alt="house">
                   <div class="space-y-1">
                      <h2 class="text-lg capitalize font-semibold text-stone-800">
                         free exchanges
@@ -285,8 +285,8 @@
                   </div>
                </div>
                <!-- card 3 -->
-               <div class="flex items-center gap-5">
-                  <img class="w-[90px]" src="./icons/question.png" alt="house">
+               <div class="text-center md:text-left md:flex md:items-center gap-5 shadow-md p-3 border border-stone-400 rounded-sm">
+                  <img class="w-[90px] mx-auto md:m-0" src="./icons/question.png" alt="house">
                   <div class="space-y-1">
                      <h2 class="text-lg capitalize font-semibold text-stone-800">
                         free exchanges
